# protein

./: .gitignore  LICENSE  README.md  SYSTEM.md  common.py  config.example.yaml  config.yaml  generators.py  optimizers.py  pipeline.py  pyproject.toml  requirements.txt  state_tree.py  validators.py
boltzgen/: 3DI3-assembly1.cif  3di3-config.yaml  SYSTEM.md  deployment.yaml  generate_nanobodies.py  job.sh
targets/il7ra/: il7ra_config.txt  prepare_il7ra.py
