[project]
name = "protein-binder-pipeline"
version = "0.1.0"
description = "A high-throughput, in-silico protein binder design pipeline built on Modal serverless infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "m-chu" }
]
keywords = ["protein", "binder", "design", "bioinformatics", "modal", "rfdiffusion", "proteinmpnn"]

dependencies = [
    "modal>=0.64.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "biopython>=1.81",
    "torch>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "icecream>=2.1.0",
    "tqdm>=4.66.0",
]

[project.urls]
Repository = "https://github.com/m-chu/protein-binder-pipeline"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["common.py", "generators.py", "validators.py", "pipeline.py"]

[tool.hatch.build.targets.sdist]
include = ["*.py", "README.md", "LICENSE"]
